Previously, GroupDef would keep a unified view of MeasureScoring between measures and groups.  No longer:  MeasureDef and GroupDef now maintain scorings at their respective levels.  Ensure that the distinct GroupDef, if present, is captured as a measure scoring extension at the MeasureReport group.  Adjust tests.  Add new assertion functional to functional tests.  Add a Claude-generate skills file for measure scoring.  Also, fix Sonar issues.